--- a/charts/docker-registry/Chart.yaml
+++ b/charts/docker-registry/Chart.yaml
@@ -1,14 +1,13 @@
-apiVersion: v2
+apiVersion: v1
 appVersion: 2.7.1
 description: A Helm chart for Docker Registry
 home: https://hub.docker.com/_/registry/
-icon: https://hub.docker.com/public/images/logos/mini-logo.svg
+icon: https://helm.twun.io/docker-registry.png
 maintainers:
-- email: jpds@protonmail.com
-  name: jpds
-- email: pete.brown@powerhrg.com
-  name: rendhalver
+- email: devin@canterberry.cc
+  name: Devin Canterberry
+  url: https://canterberry.cc/
 name: docker-registry
 sources:
 - https://github.com/docker/distribution-library-image
-version: 1.9.2
+version: 1.15.0
